--- a/main.ipynb
+++ b/main.ipynb
@@ -1281,8 +1281,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# trainer = Trainer(config)\n",
-        "# trainer.train()"
+        "trainer = Trainer(config)\n",
+        "trainer.train()"
       ],
       "metadata": {
         "id": "5vnvjPfnpw0U"
