--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "A100"
+      "gpuType": "A100",
+      "authorship_tag": "ABX9TyMJFXSnZK5Bh0RW959NWcKa",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +19,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CirF-NYU/csgy_6953_final/blob/main/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -112,14 +124,6 @@
         }
       ],
       "source": [
-        "# Install required packages\n",
-        "!pip install torch torchvision\n",
-        "!pip install opencv-python\n",
-        "!pip install scikit-image\n",
-        "!pip install tensorboard\n",
-        "!pip install einops\n",
-        "\n",
-        "# Import necessary libraries\n",
         "import os\n",
         "import sys\n",
         "import time\n",
